[package]
name = "screaming-eagle"
version = "0.1.0"
edition = "2024"
description = "A high-performance CDN written in Rust"
authors = ["Screaming Eagle Contributors"]
license = "MIT"

[lib]
name = "screaming_eagle"
path = "src/lib.rs"

[[bin]]
name = "screaming-eagle"
path = "src/main.rs"

[dependencies]
# Web framework
axum = { version = "0.8", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
tower = { version = "0.5", features = ["util", "timeout"] }
tower-http = { version = "0.6", features = [
    "cors",
    "compression-gzip",
    "compression-br",
    "trace",
] }

# HTTP client for origin fetching
reqwest = { version = "0.13", features = ["gzip", "brotli", "stream"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.9"

# Concurrent data structures
dashmap = "6"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Hashing for ETags
xxhash-rust = { version = "0.8", features = ["xxh3"] }
base64 = "0.22"

# Cryptographic signatures
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# OpenTelemetry for distributed tracing
opentelemetry = { version = "0.31", features = ["trace"] }
opentelemetry-otlp = { version = "0.31", features = ["tonic"] }
opentelemetry_sdk = { version = "0.31", features = ["rt-tokio"] }
tracing-opentelemetry = "0.32"

# UUID for trace/request IDs
uuid = { version = "1", features = ["v4"] }

# Error handling
thiserror = "2"
anyhow = "1"

# Async utilities
futures = "0.3"

# Byte handling
bytes = "1"

# URL parsing
url = "2"

# Regex for URL rewriting
regex = "1"

# Metrics
prometheus = "0.14"

# System info
num_cpus = "1.16"

# TLS support
axum-server = { version = "0.8", features = ["tls-rustls"] }

[dev-dependencies]
tokio-test = "0.4"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
